--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ color: white;
 <h2>Selecciona tu producto</h2>
 
 <div class="product-box">
-<img src="va.png" alt="Vape 1" onclick="openGallery('vape 1')" />
+<img src="va.png" alt="Vape 1" onclick="openGallery('Pillow Talk 13mL')" />
 <h3>Pillow Talk 13mL</h3>
 <label>Hits: 8,500</label>
 <p>Precio: $200</p>
@@ -176,7 +176,7 @@ color: white;
 </div>
 
 <div class="product-box">
-<img src="dosva.png" alt="Vape 2" onclick="openGallery('vape 2')" />
+<img src="dosva.png" alt="Vape 2" onclick="openGallery('Snoopy Smoke Extra Tank 2 x 18ML')" />
 <h3>Snoopy Smoke Extra Tank 2 x 18ML</h3>
 <label>Hits: 15,000</label>
 <p>Precio: $250</p>
@@ -191,7 +191,7 @@ color: white;
 </div>
 
 <div class="product-box">
-<img src="v37.png" alt="Vape 3" onclick="openGallery('vape 3')" />
+<img src="v37.png" alt="Vape 3" onclick="openGallery('Lost vape orion bar')" />
 <h3>Lost vape orion bar</h3>
 <label>Hits: 7500</label>
 <p>Precio: $170</p>
@@ -206,7 +206,7 @@ color: white;
 </div>
 
   <div class="product-box">
-<img src="snp1.png" alt="Vape 4" onclick="openGallery('vape 4')" />
+<img src="snp1.png" alt="Vape 4" onclick="openGallery('Death row')" />
 <h3>Death row</h3>
 <label>Hits:7000</label>
 <p>Precio: $200</p>
