--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@ color: white;
 let carrito = [], pago = "";
 const precios = { "Vape 1": 200, "Vape 2": 250, "Vape 3": 170 , "Vape 4": 200 };
 const galeria = {
-  "vape 1": ["va.png", "va2.png", "va3.png"],
-  "vape 2": ["dosva.png", "rosa2.png", "ama2.png"],
-  "vape 3": ["v37.png", "we.png", "fe.png"],
-  "vape 4": ["snp1.png", "snp2.png", "snp3.png"]
+  "Pillow Talk 13mL": ["va.png", "va2.png", "va3.png"],
+  "Snoopy Smoke Extra Tank 2 x 18ML": ["dosva.png", "rosa2.png", "ama2.png"],
+  "Lost vape orion bar": ["v37.png", "we.png", "fe.png"],
+  "Death row": ["snp1.png", "snp2.png", "snp3.png"]
 };
   
 let galeriaActual = [], imgIndex = 0;
