--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     }
 
     function finalizarPedido() {
-      document.getElementById("mensaje-final").innerText = "PEDIDO FINALIZADO\nToma captura y mándala a IG: smile__vp";
+      document.getElementById("mensaje-final").innerText = "PEDIDO FINALIZADO\nToma captura y mándala a IG: smile__vp https://www.instagram.com/smile___vp?igsh=eGFnMndtZnF0dnho&utm_source=qr";
     }
 
     function openGallery(productId) {
