--- a/index.html
+++ b/index.html
@@ -332,9 +332,11 @@
     }
 
     function finalizarPedido() {
-      document.getElementById("mensaje-final").innerText = "PEDIDO FINALIZADO\nToma captura y mándala a IG: smile__vp https://www.instagram.com/smile___vp?igsh=eGFnMndtZnF0dnho&utm_source=qr";
-    }
-
+      document.getElementById("mensaje-final").innerText = "PEDIDO FINALIZADO\nToma captura y mándala a IG: smile__vp  ";
+    
+     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet" />
+  <style>
+}
     function openGallery(productId) {
       galeriaActual = galeria[productId];
       if (!galeriaActual) return;
