--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
           <div style="margin-bottom: 20px;">
             <img src="${p.img}" style="max-width:100px"><br>
             <ul>
-              <li><strong>Producto:</strong> ${p.nombre}</li>
-              <li><strong>Sabor:</strong> ${p.sabor}</li>
-              <li><strong>Cantidad:</strong> ${p.cantidad}</li>
-              <li><strong>Subtotal:</strong> $${subtotal}</li>
+              <li>${p.nombre}</li>
+              <li>${p.sabor}</li>
+              <li>${p.cantidad}</li>
+              <li>$${subtotal}</li>
             </ul>
           </div>`;
       });
