--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
     <div id="transferencia-info">
       <p><strong>BBVA:</strong> 41523143916190</p>
       <p><strong>Banco Azteca:</strong> 4027665887615996</p>
+      <p>Mandar captura al instagram</p>
     </div>
     <button class="btn" onclick="showPage(1)">Regresar</button>
     <button class="btn" onclick="showPage(3)">Continuar</button>
